--- a/src/app/indice-productos/indice-productos.component.html
+++ b/src/app/indice-productos/indice-productos.component.html
@@ -1,6 +1,6 @@
 <h2 class="font-bold">Laptops</h2>
 
-<button filled mat-flat-button routerLink="/productos/crear" >
+<button  routerLink="/productos/crear" >
     Crear nueva laptop
 </button>
 
