Clase inventario agregada -> continuo con modificar los componentes de crear, editar y formulario

--- a/src/app/crear-producto/crear-producto.component.html
+++ b/src/app/crear-producto/crear-producto.component.html
@@ -1,1 +1,1 @@
-<app-formulario-producto titulo="Crear Laptop" (posteoFormulario)="guardarCambios($event)"></app-formulario-producto>
+<app-formulario-producto titulo="Crear Producto" accion="Agregar Producto" (posteoFormulario)="guardarCambios($event)"></app-formulario-producto>
