--- a/src/app/editar-producto/editar-producto.component.html
+++ b/src/app/editar-producto/editar-producto.component.html
@@ -1,3 +1,3 @@
 @if (modelo){
-    <app-formulario-producto titulo="Editar Laptop" [modelo]="modelo" (posteoFormulario)="guardarCambios($event)"></app-formulario-producto>
+    <app-formulario-producto titulo="Editar Producto" accion="Guardar Cambios" [modelo]="modelo" (posteoFormulario)="guardarCambios($event)"></app-formulario-producto>
 }
