--- a/src/app/indice-productos/indice-productos.component.html
+++ b/src/app/indice-productos/indice-productos.component.html
@@ -1,25 +1,27 @@
-<h2 class="font-bold">Laptops</h2>
+<h2 class="font-bold text-2xl">Inventario</h2>
 
-<button  routerLink="/productos/crear" >
-    Crear nueva laptop
+<button class="bg-green-500 text-white rounded-lg p-2 my-3" routerLink="/productos/crear" >
+    Agregar Producto
 </button>
 
-@if (laptops) {
-    <table mat-table [dataSource]="laptops" class="mat-elevation-z8 indice-elementos">
-        <ng-container matColumnDef="nombre">
-            <th mat-header-cell *matHeaderCellDef>Nombre</th>
-            <td mat-cell *matCellDef="let laptop">{{laptop.nombre}}</td>
-        </ng-container>
 
-        <ng-container matColumnDef="acciones">
-            <th mat-header-cell *matHeaderCellDef>Acciones</th>
-            <td mat-cell *matCellDef="let laptop">
-                <a mat-flat-button routerLink="/productos/editar/{{laptop.id}}">Editar</a>
-                <button mat-flat-button color="warn" (click)="borrar(laptop.id)">Borrar</button>
-            </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="columnasAMostrar"></tr>
-        <tr mat-row *matRowDef="let row; columns: columnasAMostrar"></tr>
-    </table>
+@if (laptops) {    
+        <table class="mt-10 table-auto">
+            <thead>
+                <tr>
+                    <th class="font-extralight">Producto</th>
+                    <th class="font-extralight">Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let laptop of laptops">
+                    <td class="font-normal text-lg pr-5">{{laptop.nombre}}</td>
+                    <td>
+                        <a routerLink="/productos/editar/{{laptop.id}}" class="bg-yellow-500 rounded-full px-3 font-medium">Editar</a>
+                        <button class="bg-red-500 rounded-full px-3 font-medium" (click)="borrar(laptop.id)">Borrar</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    
 }
